# pandora-short-term-scheduler

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  PAN-SCICAL-TST-20251025-VF-20260206-EX-20260209-R001.xml  README.md  example_star_roi_validation.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: black.yml  ci.yml  dependabot-automerge.yml  deploy-mkdocs.yml  qa.yml  tests.yml
apidocs/: index.html
docs/: README.md  apidocs.md  notebook-example.ipynb  pydantic-integration.md  roll-aware-visibility-example.ipynb
notebook-example/: index.html
roll-aware-visibility-example/: index.html
search/: search_index.json
src/packagename/: __init__.py
src/shortschedule/: __init__.py  models.py  parser.py  roll.py  scheduler.py  visualizer.py  writer.py
src/shortschedule/data/: Pandora_science_calendar_20251018_tsb-futz.xml
tests/: test_enhanced_validators.py  test_gap_filling.py  test_integration_counts.py  test_io_roundtrip.py  test_metadata_roundtrip.py  test_payload_validator.py  test_processor_with_mock_visibility.py  test_pydantic_validation.py  test_roll.py  test_scheduler_validators.py  test_star_roi_validation.py  test_version.py
