[tool.poetry]
name = "shortschedule"
version = "0.2.0"
description = ""
authors = ["Tom Barclay <barclay.astro@gmail.com>"]
readme = "README.md"
packages = [{include = "shortschedule", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
rich = "^13.9.4"
numpy = "^2.1.0"
pandas = "^2.2.3"
appdirs = "^1.4.4"
astropy = "^7.1.1"
pandoravisibility = {git = "https://github.com/PandoraMission/pandora-visibility.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
isort = "^6.0.0"
flake8 = "^7.3.0"
ruff = "^0.14.5"
jupyterlab = "^4.4.10"
mkdocs = "^1.6.1"
mkdocs-jupyter = "^0.25.1"
mkdocs-material = "^9.7.0"
pytkdocs = {version = "^0.16.5", extras = ["numpy-style"]}
mkdocs-include-markdown-plugin = "^7.1.4"
mkdocstrings = {version = "^0.30.1", extras = ["python"]}
jupyter-contrib-nbextensions = "^0.7.0"
notebook = ">=6.0.0,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
import_heading_firstparty = 'First-party/Local'
import_heading_future = 'Future'
import_heading_stdlib = 'Standard library'
import_heading_thirdparty = 'Third-party'
line_length = 79
multi_line_output = 3
no_lines_before = 'LOCALFOLDER'
profile = 'black'
